--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,108 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  color: black;
+  background-color: #d6b690;
+  font-size: large;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  background-color: bisque; 
+  padding: 1rem;
+  justify-content: flex-end;
+  display: flex;
+}
+
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.movie {
+  width: 250px;
+  margin: 1rem;
+  background-color: bisque; 
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  position: relative;
+}
+
+.movie img {
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
+}
+
+.movie-info {
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.movie-info h3 {
+  margin: 0;
+}
+
+.movie-over {
+  background-color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1rem;
+  transform: translateY(100%);
+  transition: transform 0.4s ease-in-out;
+  overflow: auto;
+  max-height: 100%;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+.movie:hover .movie-over{
+  transform: translateY(0%);
+}
+
+.search {
+  background-color: transparent;
+  border: 2px solid black;
+  border-radius: 30px;
+  font-family: inherit;
+  font-size: 1.1rem;
+  padding: 0.2rem 0.6rem;
+}
+
+.search:focus {
+  outline: none;
+}
+
+.tag {
+  background-color: white;
+  padding: 0.5rem;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.tag.green {
+  background-color: greenyellow;
+}
+
+.tag.orange {
+  background-color: orange;
+}
+
+.tag.red {
+  background-color: red;
 }
