--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,15 @@ header {
   outline: none;
 }
 
+.home-button {
+  font-family: inherit;
+  font-size: 1.1rem;
+  padding: 0.2rem 0.6rem;
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+}
+
 .tag {
   background-color: white;
   padding: 0.5rem;
